--- a/dbunit/pom.xml
+++ b/dbunit/pom.xml
@@ -10,7 +10,7 @@
 
   <groupId>org.dbunit</groupId>
   <artifactId>dbunit</artifactId>
-  <version>2.5.0-SNAPSHOT</version>
+  <version>2.5.0</version>
   <packaging>jar</packaging>
   <name>dbUnit Extension</name>
   <url>http://dbunit.sourceforge.net</url>
