--- a/dbunit/pom.xml
+++ b/dbunit/pom.xml
@@ -327,7 +327,7 @@
     <dependency>
       <groupId>org.apache.poi</groupId>
       <artifactId>poi</artifactId>
-      <version>3.2-FINAL</version>
+      <version>3.11</version>
       <exclusions>
         <exclusion>
           <artifactId>log4j</artifactId>
@@ -339,6 +339,11 @@
         </exclusion>
       </exclusions>
       <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi-ooxml</artifactId>
+      <version>3.11</version>
     </dependency>
 
     <dependency>
