--- a/dbunit/pom.xml
+++ b/dbunit/pom.xml
@@ -38,37 +38,37 @@
     <mavenVersion>3.0.4</mavenVersion>
 
     <!-- Maven plugin versions -->
-    <assemblyPluginVersion>2.4</assemblyPluginVersion>
-    <changelogPluginVersion>2.2</changelogPluginVersion>
-    <changesPluginVersion>2.10</changesPluginVersion>
-    <checkstylePluginVersion>2.12.1</checkstylePluginVersion>
-    <cleanPluginVersion>2.5</cleanPluginVersion>
-    <coberturaPluginVersion>2.6</coberturaPluginVersion>
-    <compilerPluginVersion>3.1</compilerPluginVersion>
-    <deployPluginVersion>2.8.1</deployPluginVersion>
-    <enforcerPluginVersion>1.3.1</enforcerPluginVersion>
-    <failsafePluginVersion>2.17</failsafePluginVersion>
-    <gpgPluginVersion>1.5</gpgPluginVersion>
-    <installPluginVersion>2.5.1</installPluginVersion>
-    <jarPluginVersion>2.4</jarPluginVersion>
-    <javadocPluginVersion>2.9.1</javadocPluginVersion>
-    <jdependPluginVersion>2.0-beta-2</jdependPluginVersion>
-    <jxrPluginVersion>2.4</jxrPluginVersion>
-    <pmdPluginVersion>3.0.1</pmdPluginVersion>
-    <projectInfoReportsPluginVersion>2.7</projectInfoReportsPluginVersion>
-    <releasePluginVersion>2.5</releasePluginVersion>
-    <resourcesPluginVersion>2.6</resourcesPluginVersion>
-    <sitePluginVersion>3.3</sitePluginVersion>
+    <assemblyPluginVersion>2.5.3</assemblyPluginVersion>
+    <changelogPluginVersion>2.3</changelogPluginVersion>
+    <changesPluginVersion>2.11</changesPluginVersion>
+    <checkstylePluginVersion>2.15</checkstylePluginVersion>
+    <cleanPluginVersion>2.6.1</cleanPluginVersion>
+    <coberturaPluginVersion>2.7</coberturaPluginVersion>
+    <compilerPluginVersion>3.3</compilerPluginVersion>
+    <deployPluginVersion>2.8.2</deployPluginVersion>
+    <enforcerPluginVersion>1.4</enforcerPluginVersion>
+    <failsafePluginVersion>2.18.1</failsafePluginVersion>
+    <gpgPluginVersion>1.6</gpgPluginVersion>
+    <installPluginVersion>2.5.2</installPluginVersion>
+    <jarPluginVersion>2.6</jarPluginVersion>
+    <javadocPluginVersion>2.10.2</javadocPluginVersion>
+    <jdependPluginVersion>2.0</jdependPluginVersion>
+    <jxrPluginVersion>2.5</jxrPluginVersion>
+    <pmdPluginVersion>3.4</pmdPluginVersion>
+    <projectInfoReportsPluginVersion>2.8</projectInfoReportsPluginVersion>
+    <releasePluginVersion>2.5.1</releasePluginVersion>
+    <resourcesPluginVersion>2.7</resourcesPluginVersion>
+    <sitePluginVersion>3.4</sitePluginVersion>
     <sqlPluginVersion>1.5</sqlPluginVersion>
-    <surefirePluginVersion>2.17</surefirePluginVersion>
+    <surefirePluginVersion>2.18.1</surefirePluginVersion>
 
     <!-- Framework versions --> 
-    <junitVersion>4.11</junitVersion>
-    <logbackVersion>1.1.2</logbackVersion>
-    <slf4jVersion>1.7.7</slf4jVersion>
+    <junitVersion>4.12</junitVersion>
+    <logbackVersion>1.1.3</logbackVersion>
+    <slf4jVersion>1.7.12</slf4jVersion>
     
     <!-- Other versions --> 
-    <wagonSshVersion>2.6</wagonSshVersion>
+    <wagonSshVersion>2.8</wagonSshVersion>
   </properties>
 
   <prerequisites>
