--- a/dbunit/pom.xml
+++ b/dbunit/pom.xml
@@ -10,7 +10,7 @@
 
   <groupId>org.dbunit</groupId>
   <artifactId>dbunit</artifactId>
-  <version>2.5.1-SNAPSHOT</version>
+  <version>2.5.1</version>
   <packaging>jar</packaging>
   <name>dbUnit Extension</name>
   <url>http://dbunit.sourceforge.net</url>
@@ -79,6 +79,7 @@
     <connection>scm:git:http://git.code.sf.net/p/dbunit/code.git</connection>
     <developerConnection>scm:git:https://git.code.sf.net/p/dbunit/code.git</developerConnection>
     <url>http://sourceforge.net/p/dbunit/code.git/ci/master/tree/</url>
+    <tag>dbunit-2.5.1</tag>
   </scm>
   <issueManagement>
     <system>SourceForge</system>
